Make iframe border repaint when style changes (bug 124507), r=waterson@netscape.com, sr=attinasi@netscape.com